--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,13 @@
+/**
+ * Title: tsconfig.json
+ * Author: Richard Krasso
+ * Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+ * Date: 04/16/23
+ * Last Modified by: Walter McCue
+ * Last Modification Date: 04/16/23
+ * Description: ts file for the bcrs project
+*/
+
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
