--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "ajv": "^8.12.0",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "ngx-cookie-service": "^14.0.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
