--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "ajv": "^8.12.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "ngx-cookie-service": "^14.0.1",
