--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.1",
+    "mongodb": "^5.2.0",
     "mongoose": "^6.5.2",
     "ngx-cookie-service": "^14.0.1",
     "primeicons": "^6.0.1",
