--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^14.0.0",
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mongodb": "^5.2.0",
     "mongoose": "^6.5.2",
