--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "primeicons": "^6.0.1",
     "primeng": "^14.2.3",
     "rxjs": "~7.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
