--- a/angular.json
+++ b/angular.json
@@ -23,11 +23,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
-              "src/styles.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/mdc-dark-indigo/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "src/custom-theme.scss",
+              "src/styles.css"
             ],
             "scripts": []
           },
