--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "server": "nodemon ./server/index.js",
-    "dev": "ng build && node ./server/index.js"
+    "dev": "ng build && node ./server/index.js",
+    "render-deploy": "ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +34,7 @@
     "ngx-cookie-service": "^14.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.3",
+    "render": "^0.1.4",
     "rxjs": "~7.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
@@ -52,5 +54,9 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.19",
     "typescript": "~4.7.2"
+  },
+  "engines": {
+    "node": "^16.16.0",
+    "npm": "^8.11.0"
   }
 }
