--- a/angular.json
+++ b/angular.json
@@ -101,7 +101,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/chart.js/dist/Chart.js"
+            ]
           }
         }
       }
